// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalToDelete should render correctly in "debug" mode 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ModalToDelete
    debug={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <ForwardRef
        className="delete-message"
      >
        <ForwardRef
          closeButton={true}
          closeLabel="Close"
        >
          <ForwardRef>
            Are you sure you want to delete this dashboard?
          </ForwardRef>
        </ForwardRef>
        <ForwardRef>
          <p>
            This action cannot be undone.
          </p>
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            active={false}
            className="cancel-btn"
            disabled={false}
            onClick={[Function]}
            type="button"
            variant="secondary"
          >
            Cancel
          </ForwardRef>
          <ForwardRef
            active={false}
            disabled={false}
            type="button"
            variant="outline-danger"
          >
            Delete this dashboard
          </ForwardRef>
        </ForwardRef>
      </ForwardRef>,
      "className": "confirm-delete-modal",
      "onHide": [Function],
      "show": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef
            closeButton={true}
            closeLabel="Close"
          >
            <ForwardRef>
              Are you sure you want to delete this dashboard?
            </ForwardRef>
          </ForwardRef>,
          <ForwardRef>
            <p>
              This action cannot be undone.
            </p>
          </ForwardRef>,
          <ForwardRef>
            <ForwardRef
              active={false}
              className="cancel-btn"
              disabled={false}
              onClick={[Function]}
              type="button"
              variant="secondary"
            >
              Cancel
            </ForwardRef>
            <ForwardRef
              active={false}
              disabled={false}
              type="button"
              variant="outline-danger"
            >
              Delete this dashboard
            </ForwardRef>
          </ForwardRef>,
        ],
        "className": "delete-message",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <ForwardRef>
              Are you sure you want to delete this dashboard?
            </ForwardRef>,
            "closeButton": true,
            "closeLabel": "Close",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Are you sure you want to delete this dashboard?",
            },
            "ref": null,
            "rendered": "Are you sure you want to delete this dashboard?",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalTitle",
              "render": [Function],
            },
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "closeButton": false,
              "closeLabel": "Close",
            },
            "displayName": "ModalHeader",
            "render": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <p>
              This action cannot be undone.
            </p>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "This action cannot be undone.",
            },
            "ref": null,
            "rendered": "This action cannot be undone.",
            "type": "p",
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "ModalBody",
            "render": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <ForwardRef
                active={false}
                className="cancel-btn"
                disabled={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Cancel
              </ForwardRef>,
              <ForwardRef
                active={false}
                disabled={false}
                type="button"
                variant="outline-danger"
              >
                Delete this dashboard
              </ForwardRef>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "active": false,
                "children": "Cancel",
                "className": "cancel-btn",
                "disabled": false,
                "onClick": [Function],
                "type": "button",
                "variant": "secondary",
              },
              "ref": null,
              "rendered": "Cancel",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "active": false,
                  "disabled": false,
                  "type": "button",
                  "variant": "primary",
                },
                "displayName": "Button",
                "render": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "active": false,
                "children": "Delete this dashboard",
                "disabled": false,
                "onClick": undefined,
                "type": "button",
                "variant": "outline-danger",
              },
              "ref": null,
              "rendered": "Delete this dashboard",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "active": false,
                  "disabled": false,
                  "type": "button",
                  "variant": "primary",
                },
                "displayName": "Button",
                "render": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "ModalFooter",
            "render": [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "ModalDialog",
        "render": [Function],
      },
    },
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "BACKDROP_TRANSITION_DURATION": 150,
      "Body": Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": undefined,
        "displayName": "ModalBody",
        "render": [Function],
      },
      "Dialog": Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "ModalDialog",
        "render": [Function],
      },
      "Footer": Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": undefined,
        "displayName": "ModalFooter",
        "render": [Function],
      },
      "Header": Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": Object {
          "closeButton": false,
          "closeLabel": "Close",
        },
        "displayName": "ModalHeader",
        "render": [Function],
      },
      "TRANSITION_DURATION": 300,
      "Title": Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": undefined,
        "displayName": "ModalTitle",
        "render": [Function],
      },
      "defaultProps": undefined,
      "displayName": "Bootstrap(Modal)",
      "propTypes": undefined,
      "render": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <ForwardRef
          className="delete-message"
        >
          <ForwardRef
            closeButton={true}
            closeLabel="Close"
          >
            <ForwardRef>
              Are you sure you want to delete this dashboard?
            </ForwardRef>
          </ForwardRef>
          <ForwardRef>
            <p>
              This action cannot be undone.
            </p>
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              active={false}
              className="cancel-btn"
              disabled={false}
              onClick={[Function]}
              type="button"
              variant="secondary"
            >
              Cancel
            </ForwardRef>
            <ForwardRef
              active={false}
              disabled={false}
              type="button"
              variant="outline-danger"
            >
              Delete this dashboard
            </ForwardRef>
          </ForwardRef>
        </ForwardRef>,
        "className": "confirm-delete-modal",
        "onHide": [Function],
        "show": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <ForwardRef
              closeButton={true}
              closeLabel="Close"
            >
              <ForwardRef>
                Are you sure you want to delete this dashboard?
              </ForwardRef>
            </ForwardRef>,
            <ForwardRef>
              <p>
                This action cannot be undone.
              </p>
            </ForwardRef>,
            <ForwardRef>
              <ForwardRef
                active={false}
                className="cancel-btn"
                disabled={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Cancel
              </ForwardRef>
              <ForwardRef
                active={false}
                disabled={false}
                type="button"
                variant="outline-danger"
              >
                Delete this dashboard
              </ForwardRef>
            </ForwardRef>,
          ],
          "className": "delete-message",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <ForwardRef>
                Are you sure you want to delete this dashboard?
              </ForwardRef>,
              "closeButton": true,
              "closeLabel": "Close",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Are you sure you want to delete this dashboard?",
              },
              "ref": null,
              "rendered": "Are you sure you want to delete this dashboard?",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": undefined,
                "displayName": "ModalTitle",
                "render": [Function],
              },
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "closeButton": false,
                "closeLabel": "Close",
              },
              "displayName": "ModalHeader",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <p>
                This action cannot be undone.
              </p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "This action cannot be undone.",
              },
              "ref": null,
              "rendered": "This action cannot be undone.",
              "type": "p",
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalBody",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <ForwardRef
                  active={false}
                  className="cancel-btn"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                  variant="secondary"
                >
                  Cancel
                </ForwardRef>,
                <ForwardRef
                  active={false}
                  disabled={false}
                  type="button"
                  variant="outline-danger"
                >
                  Delete this dashboard
                </ForwardRef>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "active": false,
                  "children": "Cancel",
                  "className": "cancel-btn",
                  "disabled": false,
                  "onClick": [Function],
                  "type": "button",
                  "variant": "secondary",
                },
                "ref": null,
                "rendered": "Cancel",
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "active": false,
                    "disabled": false,
                    "type": "button",
                    "variant": "primary",
                  },
                  "displayName": "Button",
                  "render": [Function],
                },
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "active": false,
                  "children": "Delete this dashboard",
                  "disabled": false,
                  "onClick": undefined,
                  "type": "button",
                  "variant": "outline-danger",
                },
                "ref": null,
                "rendered": "Delete this dashboard",
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "active": false,
                    "disabled": false,
                    "type": "button",
                    "variant": "primary",
                  },
                  "displayName": "Button",
                  "render": [Function],
                },
              },
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalFooter",
              "render": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        },
      },
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "BACKDROP_TRANSITION_DURATION": 150,
        "Body": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": undefined,
          "displayName": "ModalBody",
          "render": [Function],
        },
        "Dialog": Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        },
        "Footer": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": undefined,
          "displayName": "ModalFooter",
          "render": [Function],
        },
        "Header": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": Object {
            "closeButton": false,
            "closeLabel": "Close",
          },
          "displayName": "ModalHeader",
          "render": [Function],
        },
        "TRANSITION_DURATION": 300,
        "Title": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": undefined,
          "displayName": "ModalTitle",
          "render": [Function],
        },
        "defaultProps": undefined,
        "displayName": "Bootstrap(Modal)",
        "propTypes": undefined,
        "render": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`ModalToDelete should render correctly with no props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ModalToDelete />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <ForwardRef
        className="delete-message"
      >
        <ForwardRef
          closeButton={true}
          closeLabel="Close"
        >
          <ForwardRef>
            Are you sure you want to delete this dashboard?
          </ForwardRef>
        </ForwardRef>
        <ForwardRef>
          <p>
            This action cannot be undone.
          </p>
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            active={false}
            className="cancel-btn"
            disabled={false}
            onClick={[Function]}
            type="button"
            variant="secondary"
          >
            Cancel
          </ForwardRef>
          <ForwardRef
            active={false}
            disabled={false}
            type="button"
            variant="outline-danger"
          >
            Delete this dashboard
          </ForwardRef>
        </ForwardRef>
      </ForwardRef>,
      "className": "confirm-delete-modal",
      "onHide": [Function],
      "show": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef
            closeButton={true}
            closeLabel="Close"
          >
            <ForwardRef>
              Are you sure you want to delete this dashboard?
            </ForwardRef>
          </ForwardRef>,
          <ForwardRef>
            <p>
              This action cannot be undone.
            </p>
          </ForwardRef>,
          <ForwardRef>
            <ForwardRef
              active={false}
              className="cancel-btn"
              disabled={false}
              onClick={[Function]}
              type="button"
              variant="secondary"
            >
              Cancel
            </ForwardRef>
            <ForwardRef
              active={false}
              disabled={false}
              type="button"
              variant="outline-danger"
            >
              Delete this dashboard
            </ForwardRef>
          </ForwardRef>,
        ],
        "className": "delete-message",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <ForwardRef>
              Are you sure you want to delete this dashboard?
            </ForwardRef>,
            "closeButton": true,
            "closeLabel": "Close",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Are you sure you want to delete this dashboard?",
            },
            "ref": null,
            "rendered": "Are you sure you want to delete this dashboard?",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalTitle",
              "render": [Function],
            },
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "closeButton": false,
              "closeLabel": "Close",
            },
            "displayName": "ModalHeader",
            "render": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <p>
              This action cannot be undone.
            </p>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "This action cannot be undone.",
            },
            "ref": null,
            "rendered": "This action cannot be undone.",
            "type": "p",
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "ModalBody",
            "render": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <ForwardRef
                active={false}
                className="cancel-btn"
                disabled={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Cancel
              </ForwardRef>,
              <ForwardRef
                active={false}
                disabled={false}
                type="button"
                variant="outline-danger"
              >
                Delete this dashboard
              </ForwardRef>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "active": false,
                "children": "Cancel",
                "className": "cancel-btn",
                "disabled": false,
                "onClick": [Function],
                "type": "button",
                "variant": "secondary",
              },
              "ref": null,
              "rendered": "Cancel",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "active": false,
                  "disabled": false,
                  "type": "button",
                  "variant": "primary",
                },
                "displayName": "Button",
                "render": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "active": false,
                "children": "Delete this dashboard",
                "disabled": false,
                "onClick": undefined,
                "type": "button",
                "variant": "outline-danger",
              },
              "ref": null,
              "rendered": "Delete this dashboard",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "active": false,
                  "disabled": false,
                  "type": "button",
                  "variant": "primary",
                },
                "displayName": "Button",
                "render": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "ModalFooter",
            "render": [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "ModalDialog",
        "render": [Function],
      },
    },
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "BACKDROP_TRANSITION_DURATION": 150,
      "Body": Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": undefined,
        "displayName": "ModalBody",
        "render": [Function],
      },
      "Dialog": Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "ModalDialog",
        "render": [Function],
      },
      "Footer": Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": undefined,
        "displayName": "ModalFooter",
        "render": [Function],
      },
      "Header": Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": Object {
          "closeButton": false,
          "closeLabel": "Close",
        },
        "displayName": "ModalHeader",
        "render": [Function],
      },
      "TRANSITION_DURATION": 300,
      "Title": Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": undefined,
        "displayName": "ModalTitle",
        "render": [Function],
      },
      "defaultProps": undefined,
      "displayName": "Bootstrap(Modal)",
      "propTypes": undefined,
      "render": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <ForwardRef
          className="delete-message"
        >
          <ForwardRef
            closeButton={true}
            closeLabel="Close"
          >
            <ForwardRef>
              Are you sure you want to delete this dashboard?
            </ForwardRef>
          </ForwardRef>
          <ForwardRef>
            <p>
              This action cannot be undone.
            </p>
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              active={false}
              className="cancel-btn"
              disabled={false}
              onClick={[Function]}
              type="button"
              variant="secondary"
            >
              Cancel
            </ForwardRef>
            <ForwardRef
              active={false}
              disabled={false}
              type="button"
              variant="outline-danger"
            >
              Delete this dashboard
            </ForwardRef>
          </ForwardRef>
        </ForwardRef>,
        "className": "confirm-delete-modal",
        "onHide": [Function],
        "show": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <ForwardRef
              closeButton={true}
              closeLabel="Close"
            >
              <ForwardRef>
                Are you sure you want to delete this dashboard?
              </ForwardRef>
            </ForwardRef>,
            <ForwardRef>
              <p>
                This action cannot be undone.
              </p>
            </ForwardRef>,
            <ForwardRef>
              <ForwardRef
                active={false}
                className="cancel-btn"
                disabled={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Cancel
              </ForwardRef>
              <ForwardRef
                active={false}
                disabled={false}
                type="button"
                variant="outline-danger"
              >
                Delete this dashboard
              </ForwardRef>
            </ForwardRef>,
          ],
          "className": "delete-message",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <ForwardRef>
                Are you sure you want to delete this dashboard?
              </ForwardRef>,
              "closeButton": true,
              "closeLabel": "Close",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Are you sure you want to delete this dashboard?",
              },
              "ref": null,
              "rendered": "Are you sure you want to delete this dashboard?",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": undefined,
                "displayName": "ModalTitle",
                "render": [Function],
              },
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "closeButton": false,
                "closeLabel": "Close",
              },
              "displayName": "ModalHeader",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <p>
                This action cannot be undone.
              </p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "This action cannot be undone.",
              },
              "ref": null,
              "rendered": "This action cannot be undone.",
              "type": "p",
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalBody",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <ForwardRef
                  active={false}
                  className="cancel-btn"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                  variant="secondary"
                >
                  Cancel
                </ForwardRef>,
                <ForwardRef
                  active={false}
                  disabled={false}
                  type="button"
                  variant="outline-danger"
                >
                  Delete this dashboard
                </ForwardRef>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "active": false,
                  "children": "Cancel",
                  "className": "cancel-btn",
                  "disabled": false,
                  "onClick": [Function],
                  "type": "button",
                  "variant": "secondary",
                },
                "ref": null,
                "rendered": "Cancel",
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "active": false,
                    "disabled": false,
                    "type": "button",
                    "variant": "primary",
                  },
                  "displayName": "Button",
                  "render": [Function],
                },
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "active": false,
                  "children": "Delete this dashboard",
                  "disabled": false,
                  "onClick": undefined,
                  "type": "button",
                  "variant": "outline-danger",
                },
                "ref": null,
                "rendered": "Delete this dashboard",
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "active": false,
                    "disabled": false,
                    "type": "button",
                    "variant": "primary",
                  },
                  "displayName": "Button",
                  "render": [Function],
                },
              },
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalFooter",
              "render": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        },
      },
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "BACKDROP_TRANSITION_DURATION": 150,
        "Body": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": undefined,
          "displayName": "ModalBody",
          "render": [Function],
        },
        "Dialog": Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        },
        "Footer": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": undefined,
          "displayName": "ModalFooter",
          "render": [Function],
        },
        "Header": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": Object {
            "closeButton": false,
            "closeLabel": "Close",
          },
          "displayName": "ModalHeader",
          "render": [Function],
        },
        "TRANSITION_DURATION": 300,
        "Title": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": undefined,
          "displayName": "ModalTitle",
          "render": [Function],
        },
        "defaultProps": undefined,
        "displayName": "Bootstrap(Modal)",
        "propTypes": undefined,
        "render": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
